Rework & renaming methods